# claude-agent-sdk-htil

./: .gitignore  LICENSE  README.md
deploy/docker-compose/: .env.example  .gitignore  docker-compose.yml
src/backend/: .gitignore  01_agent_sdk_htil_simple.py  Dockerfile  debug.sh  pyproject.toml  start.sh
src/backend/app/: logging_config.yaml  main.py
src/backend/app/api/: api.py  messages.py  permissions.py
src/backend/app/core/: config.py  session.py  session_manager.py
src/backend/app/models/: schemas.py
src/backend/tests/: conftest.py
src/backend/tests/api/: test_messages.py
src/frontend/: .env.example  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
src/frontend/src/: App.jsx  App.tsx  main.tsx  style.css
src/frontend/src/api/: client.js  client.ts
src/frontend/src/components/: ChatContainer.jsx  ChatContainer.tsx  Message.jsx  Message.tsx  MessageInput.jsx  MessageInput.tsx  QuestionCard.tsx
src/frontend/src/config/: api.ts
src/frontend/src/hooks/: useAgent.js  useAgent.ts
